--- a/slide.css
+++ b/slide.css
@@ -11,3 +11,10 @@
     
 }
 
+.examplecodeb{
+    background: #E6E6FA;
+    color: black;
+    font-size: 20pt;
+    font-family: monospace;
+    
+}
